# Memory_Management_in_c

./: .gitignore  CMakeLists.txt  README.md  main.c  test.c
include/: v_alloc.h  v_memory.h  v_ptr.h  vector_alloc.h
src/: v_alloc.cpp  v_memory.c  v_ptr.cpp  vector_alloc.cpp
